# yt-summarizer

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .lintstagedrc.json  .npmignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .pre-commit-trigger  AGENTS.md  ARGOCD_SYNC_FIX.md  AUTH0-DASHBOARD-CHECKLIST.md  AZURE_OIDC_FIX_REPORT.md  DEPLOYMENT-AUDIT-FINDINGS.md  GIT_HOOKS_FIX_SUMMARY.md  IMPORT_OIDC_GUIDE.md  MIGRATION-LOG.md  MIGRATION-PLAN.md  PHASE3_SUMMARY.md  PREVIEW_DEPLOYMENT_FIXES_COMPLETE.md  QUICK-START.md  QUICK_IMPORT.md  README.md  REFACTOR_TASKS.md  SOLID-REFACTORING-SUMMARY.md  SOLID_CLEAN_CODE_CHECKLIST.md  SWA-CLEANUP-REALITY-CHECK.md  SWA-DEPLOYMENT-TROUBLESHOOTING.md  TEST_PR.md  WORKING-BASELINE.md  docker-compose.ci.yml  package-lock.json  package.json  temp-app.yaml  test-req.json
.github/: AGENT_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_ISSUES.md  PRE_COMMIT_CI_TROUBLESHOOTING.md  PRE_COMMIT_SETUP.md  PRE_COMMIT_WORKFLOW.md  TOOLS_REFERENCE.md  WINDOWS_PRECOMMIT_FLOW.md  copilot-instructions.md
.husky/: pre-commit  pre-push
docs/: AZURE_RESOURCES_IAC_GAPS.md  AZURE_RESOURCES_IAC_REMEDIATION.md  HISTORY_INDEX.md  WORKFLOW_DIFFERENCES.md  adding-new-services-guide.md  ai-skills.md  aks-setup.md  api-reference.md  architecture.md  argocd-auth-comparison.md  argocd-validation-guide.md  auth0-swa-terraform-setup.md  auth0-terraform-service-account.md  change-detection-improvement-summary.md  change-detection-refactoring.md  ci-output-formatting-improvements.md  deployment-validation-guide.md  developer-guide.md  github-app-setup.md  pipeline-detection.md  pipeline-quick-reference.md  pipeline-refactoring-changes.md  preview-environment-limitations.md  preview-image-build-strategy.md  preview-workflow-solid-refactoring.md  production-image-build-strategy.md  swa-environment-cleanup.md  terraform-oidc-management.md  workflow-refactoring-final-summary.md  workflows-refactoring.md
githooks/: README.md  pre-commit  pre-commit.bat  pre-commit.ps1  pre-push  pre-push.bat  pre-push.ps1
scripts/: bootstrap-argocd.ps1  check-hooks.ps1  clean-dev.ps1  configure-auth0-permissions.ps1  delete-auth0-test-users.ps1  delete-auth0-test-users.sh  deploy-infra.ps1  diagnose-argocd-deployment.sh  force-unlock-terraform.ps1  github-app-argocd-manifest.json  github-app-manifest.json  import-auth0-connections.sh  import-auth0-test-users.sh  install-hooks.sh  kill-stale-node.ps1  pull-pre-commit-fixes.ps1  recreate-github-app-secret.ps1  run-migrations.ps1  run-precommit.ps1  run-tests.ps1  set-auth0-env.ps1  setup-githooks.ps1  (+13 more)
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/src/api/: main.py
services/api/src/api/agents/: __init__.py  agui_endpoint.py  progress_emitter.py  yt_summarizer_agent.py
services/api/src/api/dependencies/: __init__.py  auth.py  quota.py
services/api/src/api/middleware/: __init__.py  correlation.py
services/api/src/api/models/: __init__.py  base.py  batch.py  channel.py  copilot.py  facet.py  job.py  library.py  synthesis.py  video.py
services/api/src/api/routes/: admin.py  admin_quota.py  auth.py  batches.py  channels.py  copilot.py  health.py  jobs.py  library.py  quota.py  threads.py  videos.py
services/api/src/api/services/: __init__.py  batch_service.py  channel_service.py  copilot_service.py  expanded_rag_retriever.py  job_service.py  library_service.py  llm_service.py  quota_dispatcher.py  recovery_service.py  search_service.py  stats_service.py  synthesis_service.py  thread_service.py  video_service.py  youtube_service.py
services/api/tests/: conftest.py  test_agents.py  test_auth.py  test_auth_integration.py  test_batches.py  test_channels.py  test_copilot.py  test_copilot_integration.py  test_database_integration.py  test_e2e_smoke.py  test_expanded_rag_retriever.py  test_health.py  test_jobs.py  test_library.py  test_library_integration.py  test_library_service.py  test_models.py  test_pipeline.py  test_search_service.py  test_synthesis.py  test_threads.py  test_validation_failing.py  test_videos.py
services/shared/: README.md  alembic.ini  pyproject.toml
services/shared/alembic/: env.py
services/shared/alembic/versions/: 001_initial_schema.py  002_batches_and_jobs.py  003_artifacts_and_segments.py  004_relationships_and_facets.py  005_chat_threads.py  006_chat_threads_last_run_id.py  007_chat_threads_scope_settings.py  008_jobs_next_retry_at.py  009_job_history.py  010_job_history_wait_time.py  011_estimated_wait_seconds.py  012_proxy_request_logs.py  013_fix_proxy_request_logs_fk.py  014_users_and_quotas.py
services/shared/shared/: __init__.py  config.py
services/shared/shared/blob/: __init__.py  client.py
services/shared/shared/db/: __init__.py  connection.py  job_service.py
services/shared/shared/db/models/: __init__.py  artifact.py  base.py  batch.py  channel.py  chat_thread.py  expedite_request.py  proxy_request_log.py  relationship.py  segment.py  usage_record.py  user.py
services/shared/shared/logging/: __init__.py  config.py
services/shared/shared/proxy/: __init__.py  models.py  service.py
services/shared/shared/queue/: __init__.py  client.py
services/shared/shared/telemetry/: __init__.py  config.py
services/shared/shared/worker/: __init__.py  base_worker.py  health_server.py
services/shared/tests/: conftest.py  test_blob_helpers.py  test_job_service.py  test_telemetry.py
services/workers/: .env.example  Dockerfile  README.md  pyproject.toml  run_all.py
services/workers/embed/: __init__.py  __main__.py  pyproject.toml  worker.py
services/workers/relationships/: __init__.py  __main__.py  pyproject.toml  worker.py
services/workers/summarize/: __init__.py  __main__.py  pyproject.toml  test_debug.py  test_logic.py  test_settings.py  worker.py
services/workers/tests/: conftest.py  test_blob_path_consistency.py  test_message_contracts.py  test_transcribe_resilience.py  test_workers.py
services/workers/transcribe/: __init__.py  __main__.py  pyproject.toml  worker.py
services/workers/worker_utils/: __init__.py  base_worker.py
(+837 files in other folders)
