[project]
name = "yt-summarizer-api"
version = "0.1.0"
description = "YT Summarizer API - FastAPI backend"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "azure-identity>=1.19.0",
    "azure-storage-queue>=12.12.0",
    "azure-storage-blob>=12.23.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "yt-dlp>=2024.12.6",
    "agent-framework",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests using mocked dependencies",
    "e2e: End-to-end tests requiring running API and database",
    "live: Live tests against running infrastructure (requires E2E_TESTS_ENABLED=true)",
]
# By default, run all tests except live E2E tests (which require infrastructure)
addopts = "-m 'not live'"

