[project]
name = "yt-summarizer-api"
version = "0.1.0"
description = "YT Summarizer API - FastAPI backend"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "azure-identity>=1.19.0",
    "azure-storage-queue>=12.12.0",
    "azure-storage-blob>=12.23.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "yt-dlp>=2024.12.6",
    "youtube-transcript-api>=0.6.2",  # For fetching YouTube transcripts
    # Agent Framework - pinned to compatible versions to avoid import errors
    # agent-framework-ag-ui 1.0.0b260107 requires agent-framework with use_instrumentation
    "agent-framework>=1.0.0b260107",  # Ensure we get latest with required features
    "agent-framework-ag-ui>=1.0.0b260107",
    # OpenTelemetry for observability (T185)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Ignore pre-existing violations until codebase cleanup:
# B008: Depends() in defaults (FastAPI pattern), B904/B905: raise from/zip strict
# B007: unused loop var, SIM*: simplifications, F401/F841: unused imports/vars, E712: == True
# E402: Module level import not at top (used for circular import workaround)
# UP017: datetime.UTC requires module-level import which conflicts with our pattern
ignore = ["E501", "E402", "B008", "B904", "B905", "B007", "SIM102", "SIM103", "SIM105", "SIM112", "SIM113", "SIM117", "F401", "F841", "E712", "UP017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests using mocked dependencies",
    "e2e: End-to-end tests requiring running API and database",
    "live: Live tests against running infrastructure (requires E2E_TESTS_ENABLED=true)",
]
# By default, run all tests except live E2E tests (which require infrastructure)
addopts = "-m 'not live'"

[tool.deptry]
# Dependency checker configuration - catches missing/unused dependencies
# See: https://deptry.com/
extend_exclude = ["tests", "test_.*"]

[tool.deptry.per_rule_ignores]
# DEP002: Missing dependencies in pyproject.toml
# These are handled by mapping import names to package names
DEP002 = ["azure", "opentelemetry"]  # Multi-package namespaces

[tool.bandit]
# Security scanner configuration
exclude_dirs = ["tests", "test_.*", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used (used in tests)
