[project]
name = "yt-summarizer-shared"
version = "0.1.0"
description = "YT Summarizer Shared - Common code for API and workers"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy asyncio support
    "azure-identity>=1.19.0",
    "azure-storage-queue>=12.12.0",
    "azure-storage-blob>=12.23.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "alembic>=1.14.0",
    "pyodbc>=5.2.0",
    "aioodbc>=0.5.0",
    # OpenTelemetry for distributed tracing
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    # OpenTelemetry instrumentation packages
    "opentelemetry-instrumentation-openai-v2>=2.0b0",  # Gen AI traces for OpenAI/Azure OpenAI
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",  # Database query traces
    "opentelemetry-instrumentation-httpx>=0.50b0",  # HTTP client traces (OpenAI SDK uses httpx)
    "opentelemetry-instrumentation-logging>=0.50b0",  # Log-trace correlation
    "opentelemetry-instrumentation-system-metrics>=0.50b0",  # Process/system runtime metrics
    # Azure SDK tracing support
    "azure-core-tracing-opentelemetry>=1.0.0b11",  # Azure Storage Queue/Blob traces
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.hatch.build.targets.wheel.sources]
"" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Ignore pre-existing violations until codebase cleanup:
# B008: Depends() in defaults (FastAPI pattern), B904/B905: raise from/zip strict
# B007: unused loop var, SIM*: simplifications, F401/F841: unused imports/vars, E712: == True
ignore = ["E501", "B008", "B904", "B905", "B007", "SIM102", "SIM103", "SIM105", "SIM112", "SIM113", "SIM117", "F401", "F841", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
