[project]
name = "yt-summarizer-summarize-worker"
version = "0.1.0"
description = "YT Summarizer Summarize Worker"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.57.0",
    "yt-summarizer-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
